update: update style Checkbox component

--- a/app/shared/ReactJS/components/DesignSystem/AntDesign/components/Checkbox/src/styles.css
+++ b/app/shared/ReactJS/components/DesignSystem/AntDesign/components/Checkbox/src/styles.css
@@ -1,3 +1,7 @@
+.AntCheckbox__container {
+  align-items: center;
+}
+
 .AntCheckbox__container .yy-checkbox-indeterminate .yy-checkbox-inner::after {
   border-radius: 2px;
 }
