update: update style Avatar component -> enable badge option

--- a/app/shared/ReactJS/components/UI/src/Field/src/styles.css
+++ b/app/shared/ReactJS/components/UI/src/Field/src/styles.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  --color-error: rgb(255, 77, 79);
 }
 
 .Field__label {
@@ -13,7 +14,7 @@
 }
 
 .Field__required-mark {
-  color: rgb(255, 77, 79);
+  color: var(--color-error);
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
@@ -21,7 +22,7 @@
 }
 
 .Field__error {
-  color: rgb(255, 77, 79);
+  color: var(--color-error);
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
@@ -32,4 +33,27 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
+}
+
+.Field__withError .yy-checkbox-inner,
+.Field__withError .yy-tree-checkbox-inner,
+.Field__withError .yy-color-picker-trigger,
+.Field__withError .yy-picker,
+.Field__withError .yy-input-outlined,
+.Field__withError .yy-input-number,
+.Field__withError .yy-radio-inner,
+.Field__withError .yy-select-selector,
+.Field__withError .yy-upload-drag {
+  border-color: var(--color-error) !important;
+}
+.Field__withError .yy-rate-star svg {
+  color: var(--color-error) !important;
+}
+
+.Field__withError .yy-slider-track,
+.Field__withError .yy-switch {
+  background-color: var(--color-error) !important;
+}
+.Field__withError .yy-slider-handle::after {
+  box-shadow: 0 0 0 var(--yy-slider-handle-line-width-hover) var(--color-error) !important;
 }
