fix: fix style of nested rows were selected for Table component

--- a/app/shared/ReactJS/components/DesignSystem/AntDesign/components/Table/src/styles.css
+++ b/app/shared/ReactJS/components/DesignSystem/AntDesign/components/Table/src/styles.css
@@ -138,6 +138,7 @@
   justify-content: center;
 }
 
-.AntTable__container .AntCell__selected {
+.AntTable__container .AntCell__selected,
+.AntTable__container .AntCell__selected ~ .yy-table-cell {
   background-color: var(--yy-color-primary-bg);
 }
